# deq-examples

./: Justfile  README.md  flake.nix  main.py  pyproject.toml  requirements.txt
configs/: __init__.py  default.yaml  templates.py
src/: datasets.py  implicit.py  loss.py  model.py  solvers.py  trainer.py
src/solvers/: __init__.py  anderson.py  gradient.py  neumann.py  others.py  solvers.py
tests/: test_solvers.py  test_trainer.py
tests/solvers/: test_anderson.py  test_gradient.py  test_neumann.py
