[project]
name = "deq-examples"
version = "0.1.0"
description = "Implementation of Deep Equilibrium Models"
authors = [
    {name = "Pierrot LC", email = "pierrotlc@proton.me"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
    "F722",  # Jaxtype will throw false positives.
    "E731",  # Ignore lambda assignements (why is this even a thing?).
]
