[project]
name = "deq-examples"
version = "0.1.0"
description = "DEQ Implementation with Examples"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.19.0",
    "einops>=0.8.0",
    "equinox>=0.11.10",
    "hydra-core>=1.3.2",
    "jax[cuda12]>=0.4.37",
    "jaxtyping>=0.2.36",
    "optax>=0.2.4",
    "pillow>=11.0.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = [
    "F722",  # Jaxtype will throw false positives.
    "E731",  # Ignore lambda assignements (why is this even a thing?).
]

[tool.basedpyright]
typeCheckingMode = "basic"

